--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
 	<section>
 
-		<p class="copyright">Irukanji 2008 - 2015 © All Rights Reserved</p>
+		<p class="copyright">Sentimony Records 2006 - 2015 © All Rights Reserved</p>
 
 		<nav>
 			<a href="https://www.facebook.com/irukanji.music" target="_blank">facebook</a>
