--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,13 @@
 <header>
+
 	<div class="content">
 		<hgroup>
-			<h1>Irukanji</h1>
-			<h2>Electronic Psychedelic Music</h2>
+			<h1>Sentimony Records</h1>
+			<h2>Electronic music label</h2>
 		</hgroup>
 	</div>
+
 	<div class="overlay"></div>
+	
 </header>
 
