--- a/_includes/releases.html
+++ b/_includes/releases.html
@@ -4,23 +4,7 @@
 		<p>Releases:</p>
 
 		<article>
-			<p>VA "Audio Elastique"</p>
-		</article>
-
-		<article>
-			<p>VA "Ukranian Dimension"</p>
-		</article>
-
-		<article>
-			<p>VA "Psyderchill 2"</p>
-		</article>
-
-		<article>
-			<p>VA "Special Places"</p>
-		</article>
-
-		<article>
-			<p>VA "Tabula Rasa"</p>
+			<p>Psyfactor ‎"Retro Scientific"</p>
 		</article>
 
 	</div>
