--- a/assets/css/1-tools/_fonts.scss
+++ b/assets/css/1-tools/_fonts.scss
@@ -1,3 +1,6 @@
+@import url(http://fonts.googleapis.com/css?family=Julius+Sans+One);
+@import url(http://fonts.googleapis.com/css?family=Crimson+Text);
+
 @font-face {
 	font-family: 'Open Sans';
 	font-style: normal;
