--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,12 +4,13 @@
 		<p class="copyright">Sentimony Records 2006 - 2015 © All Rights Reserved</p>
 
 		<nav>
-			<a href="https://www.facebook.com/irukanji.music" target="_blank">facebook</a>
-			<a href="https://soundcloud.com/irukanji-music" target="_blank">soundcloud</a>
-			<a href="http://coub.com/irukanji.music" target="_blank">coub</a>
-			<a href="http://www.discogs.com/artist/1375976-Irukanji" target="_blank">discogs</a>
+			<a href="https://soundcloud.com/sentimony" target="_blank">soundcloud</a>
 			<br>
-			<a href="https://irukanji.bandcamp.com" target="_blank">bandcamp</a>
+			<a href="http://www.discogs.com/label/82598-Sentimony-Records" target="_blank">discogs</a>
+			<br>
+			<a href="https://sentimony.bandcamp.com" target="_blank">bandcamp</a>
+			<br>
+			{% include svg-icons.html %}
 		</nav>
 
 	</section>
