--- a/_includes/releases.html
+++ b/_includes/releases.html
@@ -4,7 +4,23 @@
 		<p>Releases:</p>
 
 		<article>
-			<p>Psyfactor ‎"Retro Scientific"</p>
+			<a href="#"><img src="/assets/img/releases/sencd016-thumbnail.jpg" alt='Tentura "Beyond Illusion"'></a>
+			<a href="#"><h4>Tentura "Beyond Illusion"</h4></a>
+		</article>
+
+		<article>
+			<img src="/assets/img/releases/sencd015-thumbnail.jpg" alt='Psyfactor ‎"Retro Scientific"'>
+			<h4>Psyfactor ‎"Retro Scientific"</h4>
+		</article>
+
+		<article>
+			<img src="/assets/img/releases/sencd015-thumbnail.jpg" alt='Cifroteca & Roof Raiser "Wild Storm"'>
+			<h4>Cifroteca & Roof Raiser "Wild Storm"</h4>
+		</article>
+
+		<article>
+			<img src="/assets/img/releases/sencd015-thumbnail.jpg" alt='Tentura "Aurora"'>
+			<h4>Tentura "Aurora"</h4>
 		</article>
 
 	</div>
