--- a/assets/css/3-modules/_footer.sass
+++ b/assets/css/3-modules/_footer.sass
@@ -1,15 +1,15 @@
 footer
-	height: auto
+	// height: auto
 	width: 100%
 	position: relative
 	display: inline-block
 	text-align: center
 
-	section
-		position: relative
-		display: inline-block
-		top: 50%
-		transform: translateY(-50%)
+	// section
+	// 	position: relative
+	// 	display: inline-block
+	// 	top: 50%
+	// 	transform: translateY(-50%)
 
 		p
 			margin: 0
