--- a/assets/css/3-modules/_releases.sass
+++ b/assets/css/3-modules/_releases.sass
@@ -1,15 +1,15 @@
 .releases
-	height: 100%
+	// height: 100%
 	width: 100%
 	position: relative
 	display: inline-block
 	text-align: center
 
-	.vertical-centering
-		position: relative
-		display: inline-block
-		top: 50%
-		transform: translateY(-50%)
+	// .vertical-centering
+	// 	position: relative
+	// 	display: inline-block
+	// 	top: 50%
+	// 	transform: translateY(-50%)
 
 	article
 		// margin: 0
