--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,12 @@
 	<meta name="author" content="Ihor Orlovskyi">
 
 	<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
-
-	<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/img/favicons/favicon-32.png">
-
+	<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	<![endif]-->
+	<link rel="shortcut icon" href="{{ site.baseurl }}/assets/img/favicons/favicon-32.png">
+	<link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/img/favicons/favicon-57.png">
 </head>
 <body>
 
