--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,9 @@
     <meta name="keywords" content="{% if page.keywords %}{{page.keywords}},{% endif %} {{site.keywords}}">
     <meta name="author" content="Ihor Orlovskyi">
 
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css"/>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick-theme.css"/>
+    <link rel="stylesheet" href="http://dimsemenov-static.s3.amazonaws.com/dist/magnific-popup.css"> 
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -45,9 +48,14 @@
     </footer>
 
     <script src="{{ site.baseurl }}/assets/js/vendor/jquery-2.1.1.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="{{ site.baseurl }}/assets/js/vendor/imagesloaded.pkgd.min.js"></script>
     <script src="{{ site.baseurl }}/assets/js/vendor/isotope.pkgd.min.js"></script>
     <script src="{{ site.baseurl }}/assets/js/vendor/waypoints.min.js"></script>
+    <script src="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
+    <script src="http://dimsemenov-static.s3.amazonaws.com/dist/jquery.magnific-popup.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/vendor/fresco.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/vendor/fotorama.js"></script>
     <script src="{{ site.baseurl }}/assets/js/main.js"></script>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
