--- a/assets/css/2-base/_base.scss
+++ b/assets/css/2-base/_base.scss
@@ -1,97 +1,98 @@
-//	Typography
+//  Typography
 .gigantic, .huge, .large, .bigger, .big, 
 h1, h2, h3, h4, h5, h6 {
-	color: $accent-color;
-	font-weight: bold;
-	text-transform: uppercase;
+    color: $accent-color;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 .gigantic {
-	font-size: 110px;
-	line-height: 1.09;
+    font-size: 110px;
+    line-height: 1.09;
 }
 .huge, h1 {
-	font-size: 68px;
-	line-height: 1.4;
+    font-size: 68px;
+    line-height: 1.4;
 }
 .large, h2 {
-	font-size: 42px;
-	line-height: 1.4;
+    font-size: 42px;
+    line-height: 1.4;
 }
 .bigger, h3 {
-	font-size: 26px;
-	line-height: 1.4;
+    font-size: 26px;
+    line-height: 1.4;
 }
 .big, h4 {
-	font-size: 22px;
-	line-height: 1.4;
+    font-size: 22px;
+    line-height: 1.4;
 }
 .small, small {
-	font-size: 10px;
-	line-height: 1.2;
+    font-size: 10px;
+    line-height: 1.2;
 }
 
 
 p {
-	margin: 0 0 20px 0;
+    margin: 0 0 20px 0;
 }
 em {
-	font-style: italic;
+    font-style: italic;
 }
 strong {
-	font-weight: bold;
+    font-weight: bold;
 }
 hr {
-	border: solid #ddd;
-	border-width: 1px 0 0;
-	clear: both;
-	margin: 10px 0 30px;
-	height: 0;
+    border: solid #ddd;
+    border-width: 1px 0 0;
+    clear: both;
+    margin: 10px 0 30px;
+    height: 0;
 }
 
 
 
 // Links
 a {
-	color: $link-color;
-	text-decoration: none;
-	outline: 0;
+    color: $link-color;
+    text-decoration: none;
+    outline: 0;
 
-	&:hover, 
-	&:focus {color: lighten($link-color, 20%);}
+    &:hover, 
+    &:focus {color: lighten($link-color, 20%);}
 }
 
 
 // Selection colors
 // @include selection {
-// 	background-color: $selection-color;
+//  background-color: $selection-color;
 // }
 // img {
-// 	@include selection(true) {
-// 		background: transparent;
-// 	}
+//  @include selection(true) {
+//      background: transparent;
+//  }
 // }
 // body {
-// 	-webkit-tap-highlight-color: $selection-color;
+//  -webkit-tap-highlight-color: $selection-color;
 // }
 
 
 
 // Basic Styles
 html {
-	position: relative;
-	height: 100%;
+    position: relative;
+    height: 100%;
 }
 
 $body-bg: #fff;
 
 body {
-	background: $bg-color;
-	font-size: 14px;
-	line-height: 1.6;
-	font-family: 'Open Sans' sans-serif;
-	color: $text-color;
-	-webkit-font-smoothing: antialiased;
-	-webkit-text-size-adjust: 100%;
-	position: relative;
-	height: 100%;
+    background: $bg-color;
+    font-size: 14px;
+    line-height: 1.6;
+    font-family: 'Open Sans' sans-serif;
+    color: $text-color;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+    position: relative;
+    height: 100%;
+    margin: 0;
 }
