add fotorama source scss

--- a/assets/css/1-tools/_-tools-index.sass
+++ b/assets/css/1-tools/_-tools-index.sass
@@ -2,4 +2,5 @@
 // @import 'normalize'
 @import 'fonts'
 @import 'fresco'
-@import 'fotorama'
+$path: '../img/fotorama/'
+@import 'fotorama/fotorama'
