--- a/assets/css/3-modules/_releases.scss
+++ b/assets/css/3-modules/_releases.scss
@@ -9,7 +9,7 @@
 		width: 33.333333333333%;
 		padding: 0 20px;
 		margin-bottom: 40px;
-		@include box-sizing(border-box);
+		box-sizing: border-box;
 
 		img {
 			width: 100%;
