--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,9 @@
     <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/img/favicons/favicon-57.png">
 </head>
 <body>
+    <nav class="header">
+        <a href="{{ site.baseurl }}/">home</a>
+    </nav>
 
     {{ content }}
 
