--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,10 @@
 <body>
     <nav class="header">
         <a href="{{ site.baseurl }}/">home</a>
+        <a href="{{ site.baseurl }}/news">news</a>
+        <a href="{{ site.baseurl }}/releases">releases</a>
+        <a href="{{ site.baseurl }}/events">events</a>
+        <a href="{{ site.baseurl }}/artists">artists</a>
     </nav>
 
     {{ content }}
