--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,7 @@ layout: compress
             <nav>
                 <a href="https://sentimony.bandcamp.com" target="_blank">bandcamp</a>
                 <a href="https://www.facebook.com/sentimony.records" target="_blank">facebook</a>
+                <a href="https://twitter.com/sentimony" target="_blank">twitter</a>
                 <a href="https://soundcloud.com/sentimony" target="_blank">soundcloud</a>
                 <a href="http://www.discogs.com/label/82598-Sentimony-Records" target="_blank">discogs</a>
             </nav>
