--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer>
+    <h3>Our website is under construction, we are sorry for any inconvenience</h3>
     <nav class="social">
         <a href="https://sentimony.bandcamp.com" target="_blank">
             <span class="icon-bandcamp"></span>
