--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,13 +26,8 @@ layout: compress
     <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/img/favicons/favicon-57.png">
 </head>
 <body>
-    <nav class="header">
-        <a href="{{ site.baseurl }}/">home</a>
-        <a href="{{ site.baseurl }}/news/">news</a>
-        <a href="{{ site.baseurl }}/releases/">releases</a>
-        <a href="{{ site.baseurl }}/events/">events</a>
-        <a href="{{ site.baseurl }}/artists/">artists</a>
-    </nav>
+
+    {% include nav-top.html %}
 
     {{ content }}
 
