--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,6 +5,8 @@ $path: "../img/fotorama/";
 @import "vendor/fotorama/fotorama";
 @import "vendor/fonts";
 
+@import "nav-top";
+@import "list";
 @import "footer";
 
 @import "2-base/-base-index";
