--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
         <a href="http://lookinglook.com">Lookinglook Records</a>
     </nav>
 
-    <div>Web Development & Design by <a href="http://ihororlovskyi.com" target="_blank">Ihor Orlovskyi</a></div>
+    <!-- <div>Web Development & Design by <a href="http://ihororlovskyi.com" target="_blank">Ihor Orlovskyi</a></div> -->
     <div>Sentimony Records 2006 - 2015 © All Rights Reserved</div>
 </footer>
 
