--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,6 +7,7 @@ $path: "../img/fotorama/";
 
 @import "nav-top";
 @import "list";
+@import "item";
 @import "footer";
 
 @import "2-base/-base-index";
