add soc links to nav-top

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
 <footer>
-    <h3>Our website is under construction, we are sorry for any inconvenience</h3>
+    <h3>Site is under construction</h3>
+    <h4>We are sorry for any inconvenience</h4>
+
     <nav class="social">
         <a href="https://sentimony.bandcamp.com" target="_blank">
             <span class="icon-bandcamp"></span>
