--- a/_includes/nav-top.html
+++ b/_includes/nav-top.html
@@ -5,5 +5,14 @@
     <a href="{{ site.baseurl }}/events/">events</a>
     <a href="{{ site.baseurl }}/artists/">artists</a>
     <a href="{{ site.baseurl }}/friends/">friends</a>
+
+    <a href="https://sentimony.bandcamp.com" target="_blank">
+        <span class="icon-bandcamp"></span>
+        <!-- <span class="tooltip">bandcamp</span> -->
+    </a>
+    <a href="https://www.facebook.com/sentimony.records" target="_blank">
+        <span class="icon-facebook"></span>
+        <!-- <span class="tooltip">facebook</span> -->
+    </a>
 </nav>
 
