add few friends

--- a/assets/css/2-base/_base.scss
+++ b/assets/css/2-base/_base.scss
@@ -85,7 +85,7 @@ html {
 $body-bg: #fff;
 
 body {
-    background: $bg-color;
+    background: $bg-color url(../img/subtlepatterns/dark_wood.png);
     font-size: 14px;
     line-height: 1.6;
     font-family: 'Open Sans' sans-serif;
