--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,6 +3,7 @@
 @import "vendor/bourbon/bourbon";
 $path: "../img/fotorama/";
 @import "vendor/fotorama/fotorama";
+$path: "../fonts/";
 @import "vendor/fonts";
 
 @import "nav-top";
