--- a/assets/css/_item.scss
+++ b/assets/css/_item.scss
@@ -2,5 +2,30 @@ article.item {
     text-align: left;
 
     &.item-release {
+        ol {
+            margin: 0 0 20px;
+            padding: 0 0 0 35px;
+
+            li {
+
+            }
+        }
+    }
+
+    iframe.bandcamp-item {
+        display: block;
+        width: 100%;
+        overflow: hidden;
+        max-width: 320px;
+        border: 1px solid #4E4E4E;
+        margin-bottom: 20px;
+        background: #333;
+
+        &__track {
+            height: 82px;
+        }
+        &__release {
+            height: 400px;
+        }
     }
 }
