fix all posts permalinks and ids

--- a/_layouts/item-releases.html
+++ b/_layouts/item-releases.html
@@ -1,8 +1,10 @@
 ---
 layout: default
 ---
-<article class="item item-release">
-    <img src="{{ site.baseurl }}/assets/img/releases/{{ page.release-id }}.jpg" alt="Cover Of {{ page.title }}">
+
+<article class="item item-releases">
+    <img src="{{ site.baseurl }}/assets/img/releases/{{ page.id }}.jpg" alt="Cover Of {{ page.title }}">
+    <h1>{{ page.title }}</h1>
 
     {{ content }}
 
