--- a/_layouts/item-releases.html
+++ b/_layouts/item-releases.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <article class="item item-releases">
-    <img src="{{ site.baseurl }}/assets/img/releases/{{ page.id }}.jpg" alt="Cover Of {{ page.title }}">
     <h1>{{ page.title }}</h1>
+    <img class="cover" src="{{ site.baseurl }}/assets/img/releases/{{ page.id }}.jpg" alt="Cover Of {{ page.title }}">
 
     {{ content }}
 
