update friends and underconstruction

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,6 +10,9 @@ $path: "../fonts/";
 @import "header";
 @import "list";
 @import "item";
+
+@import "friends";
+
 @import "footer";
 
 @import "-vars";
