--- a/assets/css/_nav-top.scss
+++ b/assets/css/_nav-top.scss
@@ -1,15 +1,23 @@
 nav.nav-top {
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: rgba(#000, .5);
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(#000, .5);
 
-    a {
-        text-transform: uppercase;
-        padding: 14px 12px;
-        display: inline-block;
-        text-shadow: 0 0 5px #000;
-    }
+  a {
+    text-transform: uppercase;
+    padding: 14px 12px;
+    display: inline-block;
+    text-shadow: 0 0 5px #000;
+  }
+}
+
+.underconstruction {
+  font-size: 12px;
+  line-height: 30px;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  color: #ff4081;
 }
