--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,7 @@
 <footer>
+
+  <div>Support Sentimony:</div>
+
   <nav class="social">
     <a href="https://sentimony.bandcamp.com" target="_blank">
       <span class="icon-bandcamp"></span>
@@ -23,12 +26,12 @@
   </nav>
 
   <nav class="labels">
-    <a href="http://sentimony.com">Sentimony Records</a>
+    <a class="active" href="http://sentimony.com">Sentimony Records</a>
     <a href="http://aquadeepmusic.com">Aqua Deep Music</a>
     <a href="http://lookinglook.com">Lookinglook Records</a>
   </nav>
 
   <!-- <div>Web Development & Design by <a href="http://ihororlovskyi.com" target="_blank">Ihor Orlovskyi</a></div> -->
-  <div>Sentimony Records 2006 - 2015 © All Rights Reserved</div>
+  <div>Sentimony Records 2006 - 2016 © All Rights Reserved</div>
 </footer>
 
