--- a/_layouts/item-releases.html
+++ b/_layouts/item-releases.html
@@ -3,13 +3,34 @@ layout: default
 ---
 
 <article class="item item-releases">
-    <h1>{{ page.title }}</h1>
-    <img class="cover" src="{{ site.baseurl }}/assets/img/releases/{{ page.id }}.jpg" alt="Cover Of {{ page.title }}">
+  <h1>{{ page.title }}</h1>
+  <img class="cover" src="{{ site.baseurl }}/assets/img/releases/{{ page.id }}.jpg" alt="Cover Of {{ page.title }}">
 
-    {{ content }}
+  {{ content }}
 
-    {% if page.bandcamp-id %}
-        <iframe class="bandcamp-item bandcamp-item__release" src="http://bandcamp.com/EmbeddedPlayer/v=2/album={{ page.bandcamp-id }}/layout=http_3A_2F_2Fbandcamp-play.github.io_2Firukanji-album.json/bgcol=333/linkcol=88ffff/debug=true/"></iframe>
-    {% endif %}
+  {% if page.bandcamp-id %}
+      <iframe class="bandcamp-item bandcamp-item__release" src="http://bandcamp.com/EmbeddedPlayer/v=2/album={{ page.bandcamp-id }}/layout=http_3A_2F_2Fbandcamp-play.github.io_2Firukanji-album.json/bgcol=333/linkcol=88ffff/debug=true/"></iframe>
+  {% endif %}
+
+  {% if page.bandcamp %}
+    <div>
+      <span>Free Download & Donate:</span>
+      <a href="{{ page.bandcamp }}">bandcamp</a>
+    </div>
+  {% endif %}
+
+  {% if page.ektoplazm %}
+    <div>
+      <span>Free Download:</span>
+      <a href="{{ page.ektoplazm }}">ektoplazm</a>
+    </div>
+  {% endif %}
+
+  {% if page.discogs %}
+    <div>
+      <span>Release Info:</span>
+      <a href="{{ page.discogs }}">discogs</a>
+    </div>
+  {% endif %}
 </article>
 
