--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -6,14 +6,16 @@ footer {
       display: inline-block;
       padding: 4px 12px;
     }
+
     &.social {
       padding-top: 20px;
+      margin-bottom: $m;
 
       a {
         position: relative;
 
         span[class^="icon-"] {
-          font-size: 40px;
+          font-size: 20px;
         }
         span.tooltip {
           display: none;
@@ -29,7 +31,14 @@ footer {
         }
       }
     }
+
     &.labels {
+      margin: 0 auto $m;
+      display: inline-block;
+      padding: $m 0;
+      border: 1px solid rgba($accent-color, .1);
+      border-width: 1px 0;
+
       a {
       }
     }
