--- a/assets/css/_friends.scss
+++ b/assets/css/_friends.scss
@@ -1,5 +1,4 @@
 $w: 100%;
-$m: 10px;
 
 section.friends {
   padding: 10px 5px;
@@ -27,17 +26,15 @@ section.friends {
         background: rgba(#000, .5);
 
         .title {
-          font-size: 16px;
           margin-bottom: $m;
+          // font-size: 16px;
           // display: inline-block;
         }
         a {
-          font-size: 22px;
+          font-size: 18px;
+
           & + a {
             margin-left: $m;
-          }
-          &:hover {
-            color: #fff;
           }
         }
       }
