update footer and release item

--- a/_layouts/item-releases.html
+++ b/_layouts/item-releases.html
@@ -15,7 +15,7 @@ layout: default
   {% if page.bandcamp %}
     <div>
       <span>Free Download & Donate:</span>
-      <a href="{{ page.bandcamp }}">bandcamp</a>
+      <a href="{{ page.bandcamp }}"><span class="icon-bandcamp"></span> bandcamp</a>
     </div>
   {% endif %}
 
@@ -29,7 +29,7 @@ layout: default
   {% if page.discogs %}
     <div>
       <span>Release Info:</span>
-      <a href="{{ page.discogs }}">discogs</a>
+      <a href="{{ page.discogs }}"><span class="icon-discogs"></span> discogs</a>
     </div>
   {% endif %}
 </article>
