--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
 
-  <div>Support Sentimony:</div>
+  <div>Follow Us:</div>
 
   <nav class="social">
     <a href="https://sentimony.bandcamp.com" target="_blank">
@@ -11,18 +11,18 @@
       <span class="icon-facebook"></span>
       <span class="tooltip">facebook</span>
     </a>
-    <a href="https://twitter.com/sentimony" target="_blank">
-      <span class="icon-twitter"></span>
-      <span class="tooltip">twitter</span>
-    </a>
     <a href="https://soundcloud.com/sentimony" target="_blank">
       <span class="icon-soundcloud"></span>
       <span class="tooltip">soundcloud</span>
     </a>
-    <a href="http://www.discogs.com/label/82598-Sentimony-Records" target="_blank">
+    <a href="https://twitter.com/sentimony" target="_blank">
+      <span class="icon-twitter"></span>
+      <span class="tooltip">twitter</span>
+    </a>
+    <!-- <a href="http://www.discogs.com/label/82598-Sentimony-Records" target="_blank">
       <span class="icon-discogs"></span>
       <span class="tooltip">discogs</span>
-    </a>
+    </a> -->
   </nav>
 
   <nav class="labels">
