--- a/_layouts/item-artists.html
+++ b/_layouts/item-artists.html
@@ -6,6 +6,38 @@ layout: default
   <h1>{{ page.title }}</h1>
   <img src="{{ site.baseurl }}/assets/img/artists/{{ page.id }}.jpg" alt="Photo Of {{ page.title }}">
 
+  {% if page.name %}
+    <div>Name: {{ page.name }}</div>
+  {% endif %}
+
+  {% if page.location %}
+    <div>Location: {{ page.location }}</div>
+  {% endif %}
+
+  {% if page.website %}
+    <a href="{{ page.website }}"><span class="icon-public"></span></a>
+  {% endif %}
+
+  {% if page.bandcamp %}
+    <a href="{{ page.bandcamp }}"><span class="icon-bandcamp"></span></a>
+  {% endif %}
+
+  {% if page.facebook %}
+    <a href="{{ page.facebook }}"><span class="icon-facebook"></span></a>
+  {% endif %}
+
+  {% if page.soundcloud %}
+    <a href="{{ page.soundcloud }}"><span class="icon-soundcloud"></span></a>
+  {% endif %}
+
+  {% if page.soundcloud-id %}
+    <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/{{ page.soundcloud-id }}&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+  {% endif %}
+
+  <!-- {% if page.discogs %}
+    <a href="{{ page.discogs }}"><span class="icon-discogs"></span></a>
+  {% endif %} -->
+
   {{ content }}
 
 </article>
