--- a/_scss/_ArtistList.scss
+++ b/_scss/_ArtistList.scss
@@ -1,8 +1,8 @@
-.ReleaseList {
+.ArtistList {
   padding: 10px 5%;
   @include clearfix;
 
-  a.ReleaseItem {
+  a.ArtistItem {
     float: left;
     padding: 5px;
     box-sizing: border-box;
@@ -21,12 +21,12 @@
 
     @include media($ThreeSidebar) {
       // width: 33.333333%;
-      width: 25%;
+      // width: 25%;
     }
 
     @include media($Four) {
       // width: 25%;
-      width: 20%;
+      // width: 20%;
     }
 
     .image-container {
@@ -34,8 +34,8 @@
       img {
         display: block;
         width: 100%;
-        transform: scale(1) translateZ(0);
-        transition: all 0.85s ease-out;
+        // transform: scale(1) translateZ(0);
+        // transition: all 0.85s ease-out;
       }
     }
     .title {
@@ -45,7 +45,7 @@
     }
     &:hover {
       .image-container img {
-        transform: scale(1.1) translateZ(0);
+        // transform: scale(1.1) translateZ(0);
       }
       .title {
         background: transparent;
