--- a/_scss/_ArtistList.scss
+++ b/_scss/_ArtistList.scss
@@ -34,8 +34,8 @@
       img {
         display: block;
         width: 100%;
-        // transform: scale(1) translateZ(0);
-        // transition: all 0.85s ease-out;
+        transform: scale(1) translateZ(0);
+        transition: transform 0.85s ease-out;
       }
     }
     .title {
@@ -45,7 +45,7 @@
     }
     &:hover {
       .image-container img {
-        // transform: scale(1.1) translateZ(0);
+        transform: scale(1.1) translateZ(0);
       }
       .title {
         background: transparent;
