--- a/_includes/nav-top.html
+++ b/_includes/nav-top.html
@@ -1,19 +1,23 @@
 <nav class="nav-top">
-  <a href="{{ site.baseurl }}/">home</a>
+    <a href="{{ site.baseurl }}/">home</a>
 <!--   <a href="{{ site.baseurl }}/news/">news</a>
  -->  <a href="{{ site.baseurl }}/releases/">releases</a>
-  <a href="{{ site.baseurl }}/events/">events</a>
-  <a href="{{ site.baseurl }}/artists/">artists</a>
-  <a href="{{ site.baseurl }}/friends/">friends</a>
+    <a href="{{ site.baseurl }}/events/">events</a>
+    <a href="{{ site.baseurl }}/artists/">artists</a>
+    <a href="{{ site.baseurl }}/friends/">friends</a>
 
-  <a href="https://sentimony.bandcamp.com" target="_blank">
-    <span class="icon-bandcamp"></span>
-    <!-- <span class="tooltip">bandcamp</span> -->
-  </a>
-  <a href="https://www.facebook.com/sentimony.records" target="_blank">
-    <span class="icon-facebook"></span>
-    <!-- <span class="tooltip">facebook</span> -->
-  </a>
+    <a href="https://sentimony.bandcamp.com" target="_blank">
+        <span class="icon-bandcamp"></span>
+        <!-- <span class="tooltip">bandcamp</span> -->
+    </a>
+    <a href="https://www.facebook.com/sentimony.records" target="_blank">
+        <span class="icon-facebook"></span>
+        <!-- <span class="tooltip">facebook</span> -->
+    </a>
+    <a href="https://soundcloud.com/sentimony" target="_blank">
+        <span class="icon-soundcloud"></span>
+        <!-- <span class="tooltip">soundcloud</span> -->
+    </a>
 </nav>
 
 <div class="underconstruction">Our website is currently under construction. Please come back soon.</div>
