upd releases page filter

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
     </nav>
 
     <nav class="labels">
-        <a class="active" href="http://sentimony.github.io">Sentimony Records</a>
+        <a class="active" href="{{ site.baseurl }}">Sentimony Records</a>
         <a href="http://aquadeepmusic.github.io">Aqua Deep Music</a>
         <a href="http://lookinglook.github.io">Lookinglook Records</a>
     </nav>
