huge project cleaning and upd :snowflake:

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,12 +26,12 @@
     </nav>
 
     <nav class="labels">
-        <a class="active" href="{{ site.baseurl }}">Sentimony Records</a>
-        <a href="http://aquadeepmusic.github.io">Aqua Deep Music</a>
-        <a href="http://lookinglook.github.io">Lookinglook Records</a>
+        <a href="https://sentimony.com" class="active">Sentimony Records</a>
+        <a href="https://aquadeepmusic.github.io">Aqua Deep Music</a>
+        <a href="https://lookinglook.github.io">Lookinglook Records</a>
     </nav>
 
     <!-- <div>Web Development & Design by <a href="http://ihororlovskyi.com" target="_blank">Ihor Orlovskyi</a></div> -->
-    <div>Sentimony Records 2006 - 2016 © All Rights Reserved</div>
+    <div>2006 - 2017 © Sentimony Records</div>
 </footer>
 
