--- a/_layouts/ReleaseItem.html
+++ b/_layouts/ReleaseItem.html
@@ -7,8 +7,8 @@ layout: default
 
   <img 
     data-src="holder.js/700x700?auto=yes&text={{ page.title }}&fg=000&bg=0ff"
-    data-layzr="{{ site.baseurl }}/assets/img/releases/{{ page.id }}.jpg"
-    data-layzr-retina="{{ site.baseurl }}/assets/img/releases/{{ page.id }}@2x.jpg"
+    data-layzr="{{ site.baseurl }}/assets/img/releases/{{ page.slug }}.jpg"
+    data-layzr-retina="{{ site.baseurl }}/assets/img/releases/{{ page.slug }}@2x.jpg"
   >
 
   {% if page.bandcamp-id %}
