--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,12 +11,11 @@ layout: compress
 
     <title>{% if page.title %}{{ page.title }} · {% endif %}Sentimony Records{% if page.titleAfter %} · {{ page.titleAfter }}{% endif %}</title>
     <meta name="description" content="{{page.meta}}">
-    <meta name="keywords" content="{% if page.keywords %}{{page.keywords}},{% endif %} {{site.keywords}}">
-    <meta name="author" content="Ihor Orlovskyi">
 
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
-    <link rel="shortcut icon" href="{{ site.baseurl }}/assets/img/favicons/favicon-32.png">
-    <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/img/favicons/favicon-144.png">
+    <link rel="shortcut icon" href="https://firebasestorage.googleapis.com/v0/b/sentimony-nuxt.appspot.com/o/favicons%2Ffavicon-32.png?alt=media&token=717dd3ad-b082-4abd-ad56-42dd501deec0">
+    <link rel="apple-touch-icon" href="https://firebasestorage.googleapis.com/v0/b/sentimony-nuxt.appspot.com/o/favicons%2Ffavicon-144.png?alt=media&token=d5fd00a3-aab1-4fe5-9c50-37bc19ba004f">
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/sentimony-nuxt.appspot.com/o/og-images%2Fhome.jpg?alt=media&token=bda45849-0d2c-4e98-8978-097e15443a48">
 </head>
 <body>
 
