--- a/_scss/_header.scss
+++ b/_scss/_header.scss
@@ -100,7 +100,7 @@ header {
     background: $bg-color;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url(/assets/img/header-bg.jpg);
+    background-image: url(/assets/img/backgrounds/hero.jpg);
     background-size: cover;
     z-index: 1;
     opacity: 0;
