--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -1,3 +1,7 @@
+@import url(http://fonts.googleapis.com/css?family=Julius+Sans+One);
+@import url(http://fonts.googleapis.com/css?family=Crimson+Text);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
 $primary-color: #f0f;
 $text-color: #fff;
 $accent-color: #0ff;
