--- a/_scss/_ReleaseList.scss
+++ b/_scss/_ReleaseList.scss
@@ -20,12 +20,10 @@
     }
 
     @include media($ThreeSidebar) {
-      // width: 33.333333%;
       width: 25%;
     }
 
     @include media($Four) {
-      // width: 25%;
       width: 20%;
     }
 
@@ -38,15 +36,19 @@
         transition: all 0.85s ease-out;
       }
     }
+
     .title {
-      padding: 6px 0;
+      padding: 6px 8px;
       background: rgba(#444, .5);
       transition: all .15s ease-in-out;
     }
+
     &:hover {
+
       .image-container img {
         transform: scale(1.1) translateZ(0);
       }
+
       .title {
         background: transparent;
         color: #ff4081;
