--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Julius+Sans+One);
-@import url(http://fonts.googleapis.com/css?family=Crimson+Text);
+@import url(https://fonts.googleapis.com/css?family=Julius+Sans+One);
+@import url(https://fonts.googleapis.com/css?family=Crimson+Text);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
 $primary-color: #f0f;
