content upd :dolphin:

--- a/_layouts/release-page.html
+++ b/_layouts/release-page.html
@@ -13,7 +13,7 @@ layout: default
 
   {% if page.bandcamp-id %}
     <iframe class="bandcamp-item bandcamp-item__release"
-      data-layzr="http://bandcamp.com/EmbeddedPlayer/v=2/album={{ page.bandcamp-id }}/layout=http_3A_2F_2Fbandcamp-play.github.io_2Firukanji-album.json/bgcol=444/linkcol=00ffff/debug=true/"
+      data-layzr="https://bandcamp.com/EmbeddedPlayer/v=2/album={{ page.bandcamp-id }}/layout=http_3A_2F_2Fbandcamp-play.github.io_2Firukanji-album.json/bgcol=444/linkcol=00ffff/debug=true/"
     ></iframe>
   {% endif %}
 
