--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -1,6 +1,7 @@
-@import url(https://fonts.googleapis.com/css?family=Julius+Sans+One);
-@import url(https://fonts.googleapis.com/css?family=Crimson+Text);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@import url('https://fonts.googleapis.com/css?family=Julius+Sans+One');
+@import url('https://fonts.googleapis.com/css?family=Crimson+Text');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 $primary-color: #f0f;
 $text-color: #fff;
@@ -101,9 +102,8 @@ $body-bg: #fff;
 
 body {
   background: $bg-color url(../img/subtlepatterns/dark_wood.png);
-  font-size: 14px;
-  line-height: 1.6;
-  font-family: 'Open Sans', sans-serif;
+  // font: 400 14px/1.6 'Open Sans', sans-serif;
+  font: 400 15px/1.5 'Montserrat', sans-serif;
   color: $text-color;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
@@ -111,5 +111,5 @@ body {
   height: 100%;
   margin: 0;
   text-align: center;
-  padding-top: 50px;
+  padding-top: 75px;
 }
